Add page views tracking

--- a/app/markup/index.pug
+++ b/app/markup/index.pug
@@ -42,7 +42,7 @@ block content
             section.toolkit
                 .toolkit__header
                     h2 My toolkit
-                    p.description Here are some of tools and tech I use to create websites and web applications
+                    p.description Here are some of the tools and tech I use to create websites and web applications
 
                 .row.tool-list
                     .col-xs-6.col-sm-3
