--- a/app/markup/layouts/_app.pug
+++ b/app/markup/layouts/_app.pug
@@ -9,3 +9,17 @@ html(lang="en")
     block scripts
   body
     block content
+
+    script(type="text/javascript").
+      var _gauges = _gauges || [];
+      (function() {
+        var t   = document.createElement('script');
+        t.type  = 'text/javascript';
+        t.async = true;
+        t.id    = 'gauges-tracker';
+        t.setAttribute('data-site-id', '58c12140bb922a4ae3009d76');
+        t.setAttribute('data-track-path', 'https://track.gaug.es/track.gif');
+        t.src = 'https://d36ee2fcip1434.cloudfront.net/track.js';
+        var s = document.getElementsByTagName('script')[0];
+        s.parentNode.insertBefore(t, s);
+      })();
